# indexer-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup/: action.yml
.github/workflows/: main.yml  migrations.yml  release.yml
libs/indexer-db/: CHANGELOG.md  Cargo.toml  project.json
libs/indexer-db/migrations/: 20241202085922_create_users.sql  20241203080313_create_evm_logs_table.sql  20241205070014_create_chains.sql  20241213064559_add_unique_index.sql  20241213065725_create_sync_logs_table.sql
libs/indexer-db/src/: lib.rs
libs/indexer-db/src/entity/: evm_chains.rs  evm_logs.rs  evm_sync_logs.rs
listener/: CHANGELOG.md  Cargo.toml  project.json
listener/src/: error.rs  main.rs  service.rs
processor/: CHANGELOG.md  Cargo.toml  project.json
processor/src/: contracts.rs  error.rs  lib.rs  main.rs  service.rs
processor/src/contracts/: contract_handler.rs  uniswap.rs
