[workspace]
resolver = "2"
members = [
	"libs/indexer-db",
	"listener",
	"processor"
]

[workspace.dependencies]
alloy = { version = "0.7.2", features = ["full"] }
serde = '1.0.215'
serde_json = '1.0.133'
sqlx = { version = "0.8", features = [ "bigdecimal", "chrono", "postgres", "runtime-tokio", "tls-native-tls" ] }
thiserror = "2.0.6"
tokio = { version = "1.41.1", features = ["full"] }

[profile.release]
lto = true
